fix: make Footer.jsx display: block and change App--wrapper padding to give more spacing for Footer

--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,14 @@
 }
 
 .App--wrapper {
-  padding: 32px 24px; /* based on Medium.com's padding */
-  padding-top: calc(32px + 64px); /* + Navbar height */
+  /* + Navbar height */
+  padding: calc(32px + 64px) 24px 64px 24px; /* based on Medium.com's padding */
   position: relative;
-  z-index: -1;
 }
 
 @media only screen and (min-width: 768px) {
   .App--wrapper {
-    padding: 32px 10vw;
-    padding-top: calc(32px + 64px); /* + Navbar height */
+    /* + Navbar height */
+    padding: calc(32px + 64px) 10vw 64px 10vw;
   }
 }
