--- a/src/components/layouts/Footer.css
+++ b/src/components/layouts/Footer.css
@@ -1,6 +1,4 @@
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -19,7 +17,7 @@
 
 .footer-content {
   display: flex;
-  align-items:flex-start;
+  align-items: flex-start;
   justify-content: space-around;
   width: 100%;
 }
@@ -28,12 +26,13 @@ h3 {
   color: var(--surface-alt);
 }
 
-a, p {
-    color: var(--subtext);
+a,
+p {
+  color: var(--subtext);
 }
 
 .Logo > svg {
-  transition: transform .8s ease-in-out;
+  transition: transform 0.8s ease-in-out;
 }
 
 .Logo > svg:hover {
