--- a/src/components/layouts/Navbar.css
+++ b/src/components/layouts/Navbar.css
@@ -8,6 +8,7 @@
   background-color: var(--white);
   position: fixed;
   width: 100%;
+  z-index: 9999;
 }
 
 .Navbar__links {
