--- a/src/pages/Post/AuthorCard.css
+++ b/src/pages/Post/AuthorCard.css
@@ -12,6 +12,7 @@
 .AuthorCard__heading {
   grid-area: heading;
   font-size: 1rem;
+  color: var(--text);
 }
 
 .AuthorCard__name {
