--- a/src/pages/Post/Post.css
+++ b/src/pages/Post/Post.css
@@ -1,6 +1,8 @@
 .Post {
   display: flex;
   flex-direction: column;
+  position: relative;
+  z-index: 999;
 }
 
 .Post--header {
